# backend/ent/migrate/schema.go
@@ -250,6 +250,9 @@ var (
 	// PhysicaltherapyrecordsColumns holds the columns for the "physicaltherapyrecords" table.
 	PhysicaltherapyrecordsColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeInt, Increment: true},
+		{Name: "idnumber", Type: field.TypeString, Size: 13},
+		{Name: "age", Type: field.TypeInt},
+		{Name: "telephone", Type: field.TypeString},
 		{Name: "appointtime", Type: field.TypeTime},
 		{Name: "Patient_id", Type: field.TypeInt, Nullable: true},
 		{Name: "Personnel_id", Type: field.TypeInt, Nullable: true},
@@ -264,28 +267,28 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:  "physicaltherapyrecords_patients_physicaltherapyrecord",
-				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[2]},
+				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[5]},
 
 				RefColumns: []*schema.Column{PatientsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "physicaltherapyrecords_personnels_physicaltherapyrecord",
-				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[3]},
+				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[6]},
 
 				RefColumns: []*schema.Column{PersonnelsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "physicaltherapyrecords_physicaltherapyrooms_physicaltherapyrecord",
-				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[4]},
+				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[7]},
 
 				RefColumns: []*schema.Column{PhysicaltherapyroomsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "physicaltherapyrecords_status_physicaltherapyrecord",
-				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[5]},
+				Columns: []*schema.Column{PhysicaltherapyrecordsColumns[8]},
 
 				RefColumns: []*schema.Column{StatusColumns[0]},
 				OnDelete:   schema.SetNull,
