# backend/ent/schema/physicaltherapyrecord.go
@@ -1,6 +1,9 @@
 package schema
 
 import (
+	"errors"
+	"regexp"
+
 	"github.com/facebook/ent"
 	"github.com/facebook/ent/schema/edge"
 	"github.com/facebook/ent/schema/field"
@@ -14,6 +17,17 @@ type Physicaltherapyrecord struct {
 // Fields of the Physicaltherapyrecord.
 func (Physicaltherapyrecord) Fields() []ent.Field {
 	return []ent.Field{
+		field.String("idnumber").MaxLen(13).MinLen(13),
+		field.Int("age").Min(1),
+
+		field.String("telephone").Validate(func(s string) error {
+			match, _ := regexp.MatchString("^[0]{1}[869]{1}[0-9]{8}$", s)
+			if !match {
+				return errors.New("ใส่เบอร์โทรไม่ถูกต้อง")
+			}
+			return nil
+
+		}),
 		field.Time("appointtime"),
 	}
 }
